--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
+    "framer-motion": "^12.17.3",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.5.1",
