--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -45,6 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.17.3",
@@ -71,6 +73,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/lodash": "^4.17.19",
     "@types/node": "^20",
     "@types/react": "^18",
