--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "genkit": "^1.8.0",
     "highcharts": "^11.4.0",
     "highcharts-react-official": "^3.2.1",
+    "input-otp": "^1.2.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.5.1",
