--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:seed": "tsx scripts/seedDb.ts"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
     "@hookform/resolvers": "^4.1.3",
@@ -48,11 +49,13 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.5.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.17.3",
     "genkit": "^1.8.0",
     "highcharts": "^11.4.0",
     "highcharts-react-official": "^3.2.1",
+    "input-otp": "^1.2.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.5.1",
