--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "highcharts": "^11.4.0",
     "highcharts-react-official": "^3.2.1",
     "input-otp": "^1.2.4",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.5.1",
@@ -70,6 +71,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -77,6 +79,7 @@
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
+    "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.19",
     "@types/node": "^20",
     "@types/react": "^18",
