--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -45,6 +44,7 @@
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
@@ -61,6 +61,7 @@
     "lucide-react": "^0.475.0",
     "mongoose": "^8.5.1",
     "next": "15.2.3",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
     "papaparse": "^5.5.3",
     "patch-package": "^8.0.0",
