--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emailjs/browser": "^4.4.1",
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
+    "@highcharts/map-collection": "^2.3.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -46,6 +47,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "d3-geo": "^3.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.5.0",
@@ -73,18 +75,22 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "topojson-client": "^3.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/d3-geo": "^3.1.0",
     "@types/date-fns": "^2.6.0",
     "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.19",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/topojson-client": "^3.1.5",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
